# TodoList

./: .gitignore  README.md
my_todo_app/: pubspec.yaml
my_todo_app/integration_test/: simple_test.dart
my_todo_app/lib/: main.dart
my_todo_app/lib/src/rust/: frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart
my_todo_app/lib/src/rust/api/: simple.dart
my_todo_app/linux/flutter/: generated_plugins.cmake
my_todo_app/rust/: Cargo.toml
my_todo_app/rust/src/: frb_generated.rs
my_todo_app/rust/src/api/: simple.rs
my_todo_app/rust_builder/: pubspec.yaml
my_todo_app/rust_builder/android/: build.gradle  settings.gradle
my_todo_app/rust_builder/android/src/main/: AndroidManifest.xml
my_todo_app/rust_builder/ios/: rust_lib_my_todo_app.podspec
my_todo_app/rust_builder/linux/: CMakeLists.txt
my_todo_app/rust_builder/macos/: rust_lib_my_todo_app.podspec
my_todo_app/rust_builder/windows/: CMakeLists.txt
my_todo_app/windows/flutter/: generated_plugins.cmake
